Bug 391380 - moz-icon: launches handler dialog.  r=bzbarsky, sr=dmose, a=bzbarsky